--- a/core/client/index.html
+++ b/core/client/index.html
@@ -10,9 +10,9 @@
         var script = document.createElement("script");
         script.type = "text/javascript";
         if (localStorage && localStorage.getItem("__dev")) {
-            script.src = "/build.development.js";
+            script.src = "/resource/build.development.js";
         } else {
-            script.src = "/build.production.js";
+            script.src = "/resource/build.production.js";
 
             //GOOGLE ANALYTICS
             (function(i,s,o,g,r,a,m){i["GoogleAnalyticsObject"]=r;i[r]=i[r]||function(){
