--- a/core/client/index.html
+++ b/core/client/index.html
@@ -2,6 +2,12 @@
 <html>
     <head>
         <title>%{appName}</title>
+        <meta 
+            name="viewport"
+            content="minimum-scale=1, initial-scale=1, width=device-width, shrink-to-fit=no"
+        >
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:300,400&subset=cyrillic,cyrillic-ext,greek,greek-ext,latin-ext,vietnamese">
+        <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
         <link rel="stylesheet" href="/resource/build.production.css"/>
     </head>
     <body><div id="root"><div id="app"></div></div></body>
