--- a/core/client/index.html
+++ b/core/client/index.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <title>%{appName}</title>
+        <meta charset="utf-8" />
         <meta 
             name="viewport"
             content="minimum-scale=1, initial-scale=1, width=device-width, shrink-to-fit=no"
