--- a/core/client/index.html
+++ b/core/client/index.html
@@ -8,7 +8,7 @@
             content="minimum-scale=1, initial-scale=1, width=device-width, shrink-to-fit=no"
         >
         <!-- jss -->
-        <link rel="stylesheet" href="/resource/build.production.css"/>
+        <link rel="stylesheet" href="/resource/build.production.css?version=%{BUILD_NUMBER}"/>
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,500&subset=cyrillic,cyrillic-ext,greek,greek-ext,latin-ext,vietnamese">
         <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     </head>
@@ -18,18 +18,18 @@
         var script = document.createElement("script");
         script.type = "text/javascript";
         if (localStorage && localStorage.getItem("__dev")) {
-            script.src = "/resource/build.development.js";
+            script.src = "/resource/build.development.js?version=%{BUILD_NUMBER}";
 
             var element = document.getElementsByTagName("link")[0];
             element.parentNode.removeChild(element);
 
             var newStylesheet = document.createElement("link");
-            newStylesheet.href = "/resource/build.development.css";
+            newStylesheet.href = "/resource/build.development.css?version=%{BUILD_NUMBER}";
             newStylesheet.rel = "stylesheet";
 
             document.head.appendChild(newStylesheet);
         } else {
-            script.src = "/resource/build.production.js";
+            script.src = "/resource/build.production.js?version=%{BUILD_NUMBER}";
 
             //GOOGLE ANALYTICS
             (function(i,s,o,g,r,a,m){i["GoogleAnalyticsObject"]=r;i[r]=i[r]||function(){
