--- a/itemize/client/index.html
+++ b/itemize/client/index.html
@@ -8,7 +8,7 @@
             name="viewport"
             content="minimum-scale=1, initial-scale=1, width=device-width, shrink-to-fit=no"
         >
-        <link rel="stylesheet" href="/rest/resource/build.production.css?version=%{BUILD_NUMBER}"/>
+        <link rel="stylesheet" href="/rest/resource/build.production.css"/>
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,500&subset=cyrillic,cyrillic-ext,greek,greek-ext,latin-ext,vietnamese">
         <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     </head>
@@ -23,7 +23,7 @@
         // than the production build, yes, I know you can see this, I don't care, you could reverse
         // engineer it anyway
         if (localStorage && localStorage.getItem("__dev")) {
-            script.src = "/rest/resource/build.development.js?version=%{BUILD_NUMBER}";
+            script.src = "/rest/resource/build.development.js";
 
             // We remove the production css, which loads by default
             var element = document.getElementsByTagName("link")[0];
@@ -31,12 +31,12 @@
 
             // and insert the development css instead
             var newStylesheet = document.createElement("link");
-            newStylesheet.href = "/rest/resource/build.development.css?version=%{BUILD_NUMBER}";
+            newStylesheet.href = "/rest/resource/build.development.css";
             newStylesheet.rel = "stylesheet";
             document.head.appendChild(newStylesheet);
         } else {
             // We add the production build to the page
-            script.src = "/rest/resource/build.production.js?version=%{BUILD_NUMBER}";
+            script.src = "/rest/resource/build.production.js";
 
             // GOOGLE ANALYTICS
             (function(i,s,o,g,r,a,m){i["GoogleAnalyticsObject"]=r;i[r]=i[r]||function(){
