--- a/itemize/client/internal/index.html
+++ b/itemize/client/internal/index.html
@@ -11,6 +11,16 @@
         <link rel="stylesheet" href="/rest/resource/build.production.css"/>
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,500&subset=cyrillic,cyrillic-ext,greek,greek-ext,latin-ext,vietnamese">
         <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+
+        <link rel="apple-touch-icon" sizes="180x180" href="/rest/resource/icons/apple-touch-icon-no-transparency-180x180.png">
+        <link rel="icon" type="image/png" sizes="32x32" href="/rest/resource/icons/favicon-32x32.png">
+        <link rel="icon" type="image/png" sizes="16x16" href="/rest/resource/icons/favicon-16x16.png">
+        <link rel="manifest">
+        <link rel="mask-icon" href="/rest/resource/icons/macos-safari-monochrome-icon.svg" color="%{manifest.macSafariMaskIconThemeColor}">
+        <link rel="shortcut icon" href="/rest/resource/icons/favicon.ico">
+        <meta name="msapplication-TileColor" content="%{manifest.msTileColor}">
+        <meta name="msapplication-config" content="/rest/resource/manifest/browserconfig.xml">
+        <meta name="theme-color" content="%{manifest.themeColor}">
     </head>
     <!-- The app goes here -->
     <body><div id="root"><div id="app"></div></div></body>
