--- a/itemize/client/internal/index.html
+++ b/itemize/client/internal/index.html
@@ -27,13 +27,16 @@
     <script>
         // INITIALIZE SCRIPT
         var script = document.createElement("script");
+        var commonsScript = document.createElement("script");
         script.type = "text/javascript";
+        commonsScript.type = "text/javascript";
 
         // We use the __dev variable in local storage for using the development build rather
         // than the production build, yes, I know you can see this, I don't care, you could reverse
         // engineer it anyway
         if (localStorage && localStorage.getItem("__dev")) {
             script.src = "/rest/resource/build.development.js";
+            commonsScript.src = "/rest/resource/commons.development.js";
 
             // We remove the production css, which loads by default
             var element = document.getElementsByTagName("link")[0];
@@ -47,6 +50,7 @@
         } else {
             // We add the production build to the page
             script.src = "/rest/resource/build.production.js";
+            commonsScript.src = "/rest/resource/commons.production.js";
 
             // GOOGLE ANALYTICS
             (function(i,s,o,g,r,a,m){i["GoogleAnalyticsObject"]=r;i[r]=i[r]||function(){
@@ -59,7 +63,9 @@
 
         // Load asynchroniously, and add to the page
         script.async = true;
+        commonsScript.async = true;
         document.head.appendChild(script);
+        document.head.appendChild(commonsScript);
         
         // Supported languages array
         var SUPPORTED_LANGUAGES = "%{supportedLanguages}".split(",");
