--- a/client/internal/index.html
+++ b/client/internal/index.html
@@ -75,6 +75,7 @@
         commonsScript.async = true;
         document.head.appendChild(script);
         document.head.appendChild(commonsScript);
+        document.head.appendChild(vendorsScript);
         
         // Supported languages array
         var SUPPORTED_LANGUAGES = "%{supportedLanguages}".split(",");
