--- a/client/internal/index.html
+++ b/client/internal/index.html
@@ -48,6 +48,8 @@
         // and the here maps app id and app code for client side
         var HERE_APP_ID = "%{hereAppID}";
         var HERE_APP_CODE = "%{hereAppCode}";
+        // here the information for the uploads
+        var UPLOADS_PREFIX = "%{uploadsHostnamePrefix}";
         // set development mode
         function SET_DEV_MODE(mode, key) {
             document.cookie = "devmode=" + mode;
