--- a/client/internal/index.html
+++ b/client/internal/index.html
@@ -10,7 +10,7 @@
             name="viewport"
             content="minimum-scale=1, initial-scale=1, width=device-width, shrink-to-fit=no"
         >
-        <link rel="stylesheet" href="/rest/resource/build.production.css"/>
+        <link rel="stylesheet" href="/rest/resource/build.$MODE.css"/>
         <link rel="stylesheet" href="%{fontUrl}">
 
         <link rel="apple-touch-icon" sizes="180x180" href="/rest/resource/icons/apple-touch-icon-no-transparency-180x180.png">
@@ -52,6 +52,8 @@
         var UPLOADS_PREFIX = "%{uploadsHostnamePrefix}";
         // set development mode
         function SET_DEV_MODE(mode, key) {
+            document.cookie = "devmode=;expires=Thu, 01-Jan-1970 00:00:01 GMT;path=/";
+            document.cookie = "devkey=;expires=Thu, 01-Jan-1970 00:00:01 GMT;path=/";
             document.cookie = "devmode=" + mode;
             document.cookie = "devkey=" + key;
         }
