--- a/client/internal/index.html
+++ b/client/internal/index.html
@@ -11,6 +11,7 @@
             content="minimum-scale=1, initial-scale=1, width=device-width, shrink-to-fit=no"
         >
         <link rel="stylesheet" href="/rest/resource/build.$MODE.css"/>
+        <link rel="stylesheet" href="/rest/resource/vendors~build.$MODE.css"/>
         <link rel="stylesheet" href="%{fontUrl}">
 
         <link rel="apple-touch-icon" sizes="180x180" href="/rest/resource/icons/apple-touch-icon-no-transparency-180x180.png">
