--- a/client/internal/index.html
+++ b/client/internal/index.html
@@ -15,9 +15,9 @@
             name="viewport"
             content="minimum-scale=1, initial-scale=1, width=device-width, shrink-to-fit=no"
         >
-        <link rel="stylesheet" href="/rest/resource/build.$MODE.css">
-        <link rel="stylesheet" href="/rest/resource/vendors~build.$MODE.css">
-        <link rel="stylesheet" href="%{fontUrl}">
+        <link rel="stylesheet" defer href="/rest/resource/build.$MODE.css">
+        <link rel="stylesheet" defer href="/rest/resource/vendors~build.$MODE.css">
+        <link rel="stylesheet" defer href="%{fontUrl}">
         <style>
             *, html, body, #root, #main, #app {
                 font-family: '%{fontName}', sans-serif;
