SEO Hijacking overkill

--- a/client/internal/index.html
+++ b/client/internal/index.html
@@ -53,7 +53,7 @@
         // the application name
         var APP_NAME = "%{appName}";
         // the entire configuration
-        var CONFIG = "%{}";
+        var CONFIG = "$CONFIG";
         // the SSR data, note that this is runtime calculated, so it differs, just like $MODE
         var SSR = "$SSR";
     </script>
