--- a/client/internal/index.html
+++ b/client/internal/index.html
@@ -7,6 +7,7 @@
         <meta property="og:title" content="$SSROGTITLE">
         <meta property="og:description" content="$SSROGDESCR">
         <meta property="og:image" content="$SSROGIMG">
+        <meta name="robots" content="$SSRROBOTS">
 
         <meta name="application-name" content="%{appName}">
 
