--- a/client/internal/index.html
+++ b/client/internal/index.html
@@ -16,8 +16,7 @@
             name="viewport"
             content="minimum-scale=1, initial-scale=1, width=device-width, shrink-to-fit=no"
         >
-        <link rel="stylesheet" defer href="/rest/resource/build.$MODE.css?buildnumber=$BUILDNUMBER">
-        <link rel="stylesheet" defer href="/rest/resource/vendors~build.$MODE.css?buildnumber=$BUILDNUMBER">
+        <link rel="stylesheet" defer href="/rest/resource/index.$MODE.css?buildnumber=$BUILDNUMBER">
         <link rel="stylesheet" defer href="%{fontUrl}">
         <style>
             *, html, body, #root, #main, #app {
@@ -36,10 +35,7 @@
         <meta name="msapplication-config" content="/rest/resource/manifest/browserconfig.xml">
         <meta name="theme-color" content="%{manifest.themeColor}">
 
-        <script src="/rest/resource/polyfills.$MODE.js?buildnumber=$BUILDNUMBER" defer></script>
-        <script src="/rest/resource/vendors~build.$MODE.js?buildnumber=$BUILDNUMBER" defer></script>
-        <script src="/rest/resource/commons.$MODE.js?buildnumber=$BUILDNUMBER" defer></script>
-        <script src="/rest/resource/build.$MODE.js?buildnumber=$BUILDNUMBER" defer></script>
+        <script type="module" src="/rest/resource/index.$MODE.js?buildnumber=$BUILDNUMBER" defer></script>
 
         <SSRHEAD>
     </head>
